--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "homebridge-plugin-name",
-  "displayName": "Plugin Name",
+  "name": "homebridge-driveway-gate",
+  "displayName": "Driveway Gate",
   "type": "module",
   "version": "1.0.0",
   "private": true,
-  "description": "A short description about what your plugin does.",
-  "author": "Your Name",
+  "description": "This is homebridge plugin to communicate with shelly 1 plus and make this as a gate (garage door) .",
+  "author": "MZ",
   "license": "Apache-2.0",
   "homepage": "https://github.com/USERNAME/GITHUB_PROJECT_NAME#readme",
   "repository": {
@@ -33,6 +33,7 @@
     "@eslint/js": "^9.14.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.8.6",
+    "@types/ws": "^8.5.13",
     "eslint": "^9.14.0",
     "homebridge": "^2.0.0-beta.0",
     "nodemon": "^3.1.7",
@@ -40,5 +41,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
+  },
+  "dependencies": {
+    "events": "^3.3.0",
+    "ws": "^8.18.0"
   }
 }
