--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "homebridge-driveway-gate",
-  "displayName": "Driveway Gate",
+  "name": "homebridge-shelly-door",
+  "displayName": "Shelly as Door Controller",
   "type": "module",
   "version": "1.0.0",
   "private": true,
-  "description": "This is homebridge plugin to communicate with shelly 1 plus and make this as a gate (garage door) .",
-  "author": "MZ",
+  "description": "This is homebridge plugin to use shelly plus 1 as garage or gate door opener",
+  "author": "Mlody333",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/USERNAME/GITHUB_PROJECT_NAME#readme",
+  "homepage": "https://github.com/Mlody33/shelly-gate#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "https://github.com/Mlody33/shelly-gate.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/Mlody33/shelly-gate/issues"
   },
   "keywords": [
     "homebridge-plugin"
