--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "homebridge-shelly-door",
-  "displayName": "Shelly as Door Controller",
+  "displayName": "Homebridge Shelly Door Controller",
   "type": "module",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "private": true,
-  "description": "This is homebridge plugin to use shelly plus 1 as garage or gate door opener",
+  "description": "This is homebridge plugin to use shelly plus 1 as garage or gate door controller",
   "author": "Mlody333",
   "license": "Apache-2.0",
   "homepage": "https://github.com/Mlody33/shelly-gate#readme",
